--- a/scss/bootstrap/_functions.scss
+++ b/scss/bootstrap/_functions.scss
@@ -51,8 +51,8 @@
 // Color contrast
 @function color-yiq($color, $dark: $yiq-text-dark, $light: $yiq-text-light) {
   $r: red($color);
-  $g: green($color);
-  $b: blue($color);
+  $g: lightgreen($color);
+  $b: lightgreen($color);
 
   $yiq: (($r * 299) + ($g * 587) + ($b * 114)) / 1000;
 
@@ -64,7 +64,7 @@
 }
 
 // Retrieve color Sass maps
-@function color($key: "blue") {
+@function color($key: "lightgreen") {
   @return map-get($colors, $key);
 }
 
