--- a/scss/bootstrap/_variables.scss
+++ b/scss/bootstrap/_variables.scss
@@ -34,14 +34,14 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #007bff !default;
+$lightgreen:    #007bff !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
 $red:     #dc3545 !default;
 $orange:  #fd7e14 !default;
 $yellow:  #ffc107 !default;
-$green:   #28a745 !default;
+$lightgreen:   #28a745 !default;
 $teal:    #20c997 !default;
 $cyan:    #17a2b8 !default;
 
@@ -49,14 +49,14 @@ $colors: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
 $colors: map-merge(
   (
-    "blue":       $blue,
+    "lightgreen":       $lightgreen,
     "indigo":     $indigo,
     "purple":     $purple,
     "pink":       $pink,
     "red":        $red,
     "orange":     $orange,
     "yellow":     $yellow,
-    "green":      $green,
+    "lightgreen":      $lightgreen,
     "teal":       $teal,
     "cyan":       $cyan,
     "white":      $white,
@@ -66,9 +66,9 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
+$primary:       $lightgreen !default;
 $secondary:     $gray-600 !default;
-$success:       $green !default;
+$success:       $lightgreen !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
