--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,18 @@ body {
   color: #212529;
   text-align: left;
   background-color: #fff; }
+  #background-video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+    opacity: 0.1;
+  }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
